manifests/apps/fetch-api/connectors/downloader/connector-downloader.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: connector-downloader
  namespace: fetch-api
  labels:
    app: connector-downloader
    env: home
  annotations:
    reloader.stakater.com/auto: "true"
spec:
  revisionHistoryLimit: 1
  replicas: 1
  selector:
    matchLabels:
      app: connector-downloader
  template:
    metadata:
      labels:
        app: connector-downloader
        env: home
    spec:
      securityContext:
        fsGroup: 1000
        fsGroupChangePolicy: OnRootMismatch
      restartPolicy: Always
      imagePullSecrets:
        - name: registry-fetch-api
      volumes:
        - name: connector-downloader-data
          persistentVolumeClaim:
            claimName: connector-downloader-data
      #   - name: script-health-probe
      #     configMap:
      #       name: script-health-probe
      #       defaultMode: 0755
      containers:
        - name: connector-downloader
          image: ghcr.io/dragon699/fetch-api/connectors/downloader:1.0.4
          imagePullPolicy: Always
          securityContext:
            runAsUser: 1000
            runAsGroup: 1000
            runAsNonRoot: true
          volumeMounts:
            - name: connector-downloader-data
              mountPath: /data
          #   - name: script-health-probe
          #     mountPath: /home/health-probe.py
          #     subPath: health-probe.py
          ports:
            - containerPort: 9069
          command: ["/app/downloader"]
